fix issues with workflow config

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,7 +46,6 @@ name: 'Terraform'
 
 on:
   push:
-    branches: [ "main", "kubernetes-setup" ]
   pull_request:
 
 permissions:
@@ -55,57 +54,10 @@ permissions:
 jobs:
   terraform:
     name: 'Terraform'
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     environment: production
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.6.0
-
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      uses: hashicorp/terraform-github-actions/init@master
-      env:
-        TF_ACTION_WORKING_DIR: 'kubernetes/terraform'
-        
-    # Checks that all Terraform configuration files adhere to a canonical format
-    - name: 'Terraform FMT check'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_subcommand: 'fmt -check'
-        tf_actions_working_dir: 'kubernetes/terraform'
-        tf_actions_comment: true
-
-    # Generates an execution plan for Terraform
-    - name: 'Terraform Plan'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_subcommand: 'plan -input=false'
-        tf_actions_working_dir: 'kubernetes/terraform'
-        tf_actions_comment: true
-        
-      # On push to "main", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_subcommand: 'apply -auto-approve -input=false'
-        tf_actions_working_dir: 'kubernetes/terraform'
-        tf_actions_comment: true
-      env:
+    env:
         TF_VAR_template_vm_id: ${{ secrets.TF_VAR_template_vm_id }}
         TF_VAR_number_of_control_planes: ${{ secrets.TF_VAR_number_of_control_planes }}
         TF_VAR_number_of_large_workers: ${{ secrets.TF_VAR_number_of_large_workers }}
@@ -122,4 +74,30 @@ jobs:
         TF_VAR_vm_password: ${{ secrets.TF_VAR_vm_password }}
         TF_VAR_vm_username: ${{ secrets.TF_VAR_vm_username }}
         TF_VAR_vm_public_key: ${{ secrets.TF_VAR_vm_public_key }}
+        
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: "kubernetes/terraform"
 
+    steps:
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
+        
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      shell: bash
+      run: terraform init
+
+    # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      shell: bash
+      run: terraform plan -input=false
+
+      # On changes to "main", build or change infrastructure according to Terraform configuration files
+      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+    - name: Terraform Apply
+      shell: bash
+      run: terraform apply -auto-approve -input=false
