remove restriction on parallelism

--- a/.github/workflows/kubernetes-setup.yml
+++ b/.github/workflows/kubernetes-setup.yml
@@ -101,7 +101,7 @@ jobs:
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       shell: bash
-      run: terraform apply -auto-approve -input=false -parallelism=1
+      run: terraform apply -auto-approve -input=false
 
   inventory:
     needs: terraform
